syntax = "proto3";
package protobuf;
option go_package = "protobuf";

// Request 请求结构
message GetTokenRequest {
    //调用注册方法时需要携带的参数
    string name = 1;
}

// Response 响应结构
message GetTokenResponse {
    int32 recode =1;
    string message = 2;
    string token = 3;
}
service GetTokenService{
    // Register 测试方法
    rpc GetToken(GetTokenRequest) returns (GetTokenResponse) {};
}